Understaing the flow of mern

--- a/src/templates/views/register.hbs
+++ b/src/templates/views/register.hbs
@@ -22,7 +22,7 @@
                     </label>
                     <input
                         class="appearance-none block w-full bg-gray-200 text-gray-700 border border-gray-200 rounded py-3 px-4 leading-tight focus:outline-none focus:bg-white focus:border-gray-500"
-                        id="grid-first-name" name="firstname" type="text" placeholder="Jane">
+                        id="grid-first-name" name="firstLetterName" type="text" placeholder="Jane">
 
                 </div>
                 <div class="w-full md:w-1/2 px-3">
